--- a/style.css
+++ b/style.css
@@ -1,39 +1,14 @@
 body {
+    background-color: #f0f0f0; /* cor gelo */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* nova fonte */
+}
 
-    font-family: Arial, sans-serif;
-    
-    margin: 0;
-    
-    padding: 0;
-    
-    }
-    
-    header {
-    
-    background-color: #3333;
-    
-    color: #fff;
-    
-    padding: 10px;
-    
-    text-align: center;
-    
-    }
-    
-    main {
-    
+.container {
+    width: 80%;
+    margin: 0 auto;
     padding: 20px;
-    
-    }
-    
-    footer {
-    
-    background-color: #333;
-    
-    color: #fff;
-    
-    text-align: center;
-    
-    padding: 10px;
-    
-    }
+}
+
+.green {
+    color: green; /* cor verde */
+}
