--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
 body {
-    background-color: #f0f0f0; /* cor gelo */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /*Robote*/
 
+    font-family: Arial, sans-serif;
+    
     margin: 0;
+    
     padding: 0;
-
-}
-
-
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-
-}
-
-.green {
-    color: green; /*cor verde*/
-    text-align: center;
+    
+    }
+    
+    header {
+    
+    background-color: #3333;
+    
+    color: #fff;
+    
     padding: 10px;
-
-}
+    
+    text-align: center;
+    
+    }
+    
+    main {
+    
+    padding: 20px;
+    
+    }
+    
+    footer {
+    
+    background-color: #100935;
+    
+    color: #fff;
+    
+    text-align: center;
+    
+    padding: 10px;
+    
+    }
