--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
     
     header {
     
-    background-color: #3333;
+    background-color: #100935;
     
-    color: #fff;
+    color: #a71414;
     
     padding: 10px;
     
@@ -30,7 +30,7 @@ body {
     
     background-color: #100935;
     
-    color: #fff;
+    color: #a71414;
     
     text-align: center;
     
