--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-    font-family: Arial, sans-serif;
+    font-family: Arial, Georgia, 'Times New Roman', Times, serif;
     
     margin: 0;
     
