--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 body {
-
+    background-color: red; /* vermelho */
+    color: blue; /* azul */
     font-family: Arial, Georgia, 'Times New Roman', Times, serif;
-    
     margin: 0;
-    
     padding: 0;
-    
-    }
+}
     
     header {
     
