--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     
     padding: 10px;
     
-    text-align:center;
+    text-align:Right;
     
     }
     
@@ -31,7 +31,7 @@ body {
     
     color: #a71414;
     
-    text-align:center;
+    text-align:Right;
     
     padding: 10px;
     
