--- a/style.css
+++ b/style.css
@@ -1,42 +1,39 @@
-html {***
-} 
-table, th, td { 
+body {
 
-    border:1px solid black;
-
-} p{ } font-family: Arial, Helvetica, sans-serif;
-
-#imagem { 
+    font-family: Arial, sans-serif;
+    
+    margin: 0;
+    
+    padding: 0;
+    
+    }
+    
+    header {
+    
+    background-color: #3333;
+    
+    color: #fff;
+    
+    padding: 10px;
     
     text-align: center;
-
-} 
-
-caption { 
     
-    font-size: 20px;
+    }
     
-    color: black; 
+    main {
+    
+    padding: 20px;
+    
+    }
+    
+    footer {
+    
+    background-color: #333;
+    
+    color: #fff;
     
     text-align: center;
-
-} 
-
-td { text-align: center;
-     font-weight: bold;
-      color: #c26861;
-       #colorA { 
-        color: #006600;
-         font-size: 18;
-         } 
-         #colorB { 
-            color: #0000ff; 
-            font-size: 18;
-
-         } 
-         
-         figcaption{ 
-
-         } figure img { border-radius: 50%;
-
-         } 
+    
+    padding: 10px;
+    
+    }
