--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
 
     font-family: Arial, 'Times New Roman', Times, serif;
     
