--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-body {
-    font-family: Arial, 'Times New Roman', Times, serif;
-    
+html{
+    background-color:rgb(239, 240, 227)   
+}
+
+p{
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     
     padding: 0;
+}    
     
-    }
     
     header {
     
