--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ p{
     
     header {
     
-    background-color: #971a1a33;
+    background-color: rgb(239, 240, 227);
     
-    color: #fff;
+    color: #0d0c0c;
     
     padding: 10px;
     
@@ -30,9 +30,9 @@ p{
     
     footer {
     
-    background-color: #c21616;
+    background-color: rgb(239, 240, 227);
     
-    color: #fff;
+    color: #070707;
     
     text-align: center;
     
