--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@ p{
     padding: 0;
 }    
     
+
+figcaption{
+    background-color: black;
+    color: white;
+    font-style: italic;
+    margin: auto;
+    text-align: center;
+}
+
+figure img {
+    border-radius: 50%;
+}
+
     
     header {
     
