--- a/style.css
+++ b/style.css
@@ -9,12 +9,18 @@ p{
     padding: 0;
 }    
 
-img {
-    border-radius: 10%;
-    border-image-width: 50;
-    text-align: center;
+    div {
+        width: 500px;
+        height: 200px;
+        overflow: hidden; /* Faz o div não aumentar a altura por causa da imagem */
+    }
+    
+    img {
+        border: 1px solid red;
+        width: 100%;
+    }
 
-}
+
 
     
     header {
