--- a/style.css
+++ b/style.css
@@ -30,6 +30,19 @@ img {
     text-align: center;
     
     }
+
+
+    text {
+    
+        background-color: rgb(239, 240, 227);
+        
+        color: #0d0c0c;
+        
+        padding: 10px;
+        
+        text-align: center;
+        
+        }
     
     main {
     
