--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ img {
         
         color: #0d0c0c;
         
-        padding: 10px;
+        padding: 5%;
         
         text-align: center;
         
