--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ img {
         text-align: center;
         
         }
+
+        img {
+            height: 200px;
+            width: 700px;
+          }
     
     main {
     
