--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ img {
         
         }
 
-        img-destaque {
+        img-imagem1 {
             height: 300px;
             width: 700px;
           }
