--- a/style.css
+++ b/style.css
@@ -60,12 +60,9 @@ img {
         
         }
 
-          {
-
-            image
+        img {
             height: 300px;
             width: 300px;
-
           }
 
 
