--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ img {
             width: 300px;
           }
 
+     .primeiraimg {
+            height: 300px;
+            width: 300px;
+          }
+
 
     main {
     
