--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ img {
             height: 300px;
             width: 300px;
           }
-
+          
+          #primeira-imagem {
+            width: 300px;
+            height: 700px;
+        }
 
 
     main {
