--- a/style.css
+++ b/style.css
@@ -88,14 +88,13 @@ img {
     
     padding: 40px;
     
+    .bord {
+        width: 320px;
+        padding: 10px;
+        border: 5px solid gray;
+        margin: auto;
     }
-
-
-#colorA {
-    color: #006600;
-    font-size: 18;
-    padding: 0,5%;
-
+    
 }
 
 #legend {
