--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@ html{
     background-color:rgb(239, 240, 227)   
 }
 
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+}
+
+/*Header/Blog Title*/
+.header {
+  padding: 30px;
+  text-align: center;
+  background: white;
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+
+
 p{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
