--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header {
   padding: 30px;
   text-align: center;
-  background: white;
+  background: rgb(239, 240, 227);
 }
 
 .header h1 {
